--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -4,12 +4,16 @@ require:
 
 AllCops:
   NewCops: enable
+  SuggestExtensions: false
   Exclude:
     - 'bin/bundle'
     - 'node_modules/**/*'
     - 'Guardfile'
     - 'db/schema.rb'
-
+    - 'config/initializers/*'
+    - 'db/migrate/*'
+    - 'db/schema.rb'
+    
 Metrics/BlockLength:
   Exclude:
     - 'config/routes.rb'
@@ -49,3 +53,4 @@ Style/Documentation:
     - 'config/*'
     - 'app/models/application_record.rb'
     - 'app/helpers/application_helper.rb'
+
